changed the sentence at the beginning of the web page

--- a/final_project/web/templates/index_basic.html
+++ b/final_project/web/templates/index_basic.html
@@ -32,7 +32,7 @@
 	<div class="central_block">
 		<div id="centralheading">
 			<h1>
-				How sound your phrases?
+				How your phrases sound?
 			</h1>
 		</div>
 		<div id="inputbox">
